--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,28 +1,33 @@
 <div class="button-row">
   <a mat-raised-button color="primary" [routerLink]="['/product-create']"><mat-icon>add</mat-icon></a>
 </div>
+
+
+
 <div class="example-container mat-elevation-z8">
+
+  
   <table mat-table #table [dataSource]="dataSource">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Title Column -->
-    <ng-container matColumnDef="isbn">
-      <th mat-header-cell *matHeaderCellDef> ISBN </th>
-      <td mat-cell *matCellDef="let element" class="isbn-col"> {{element.isbn}} </td>
+    <ng-container matColumnDef="produto_id">
+      <th mat-header-cell *matHeaderCellDef> ID Produto </th>
+      <td mat-cell *matCellDef="let element" class="produto_id-col"> {{element.produto_id}} </td>
     </ng-container>
 
     <!-- Title Column -->
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Title </th>
-      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    <ng-container matColumnDef="nro_serie">
+      <th mat-header-cell *matHeaderCellDef> Numero de Serie </th>
+      <td mat-cell *matCellDef="let element"> {{element.nro_serie}} </td>
     </ng-container>
 
     <!-- Author Column -->
-    <ng-container matColumnDef="author">
-      <th mat-header-cell *matHeaderCellDef> Author </th>
-      <td mat-cell *matCellDef="let element"> {{element.author}} </td>
+    <ng-container matColumnDef="termino_vigencia">
+      <th mat-header-cell *matHeaderCellDef> Termino de Vigencia </th>
+      <td mat-cell *matCellDef="let element"> {{element.termino_vigencia}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
