add primeng and remove parts materialAngular

--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,4 +1,4 @@
-.example-container {
+.example-container, p-table {
   display: flex;
   flex-direction: column;
   max-height: 500px;
@@ -15,7 +15,7 @@
   margin: 10px 0;
 }
 
-table {
+table, p-table {
   width: 100%;
 }
 
