--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -2,35 +2,27 @@
   <a mat-raised-button color="primary" [routerLink]="['/product-create']"><mat-icon>add</mat-icon></a>
 </div>
 
+<p-table #dt [columns]="cols" [value]="products" [paginator]="true" [rows]="15">
+    <ng-template pTemplate="caption">
+      <div style="text-align: right">        
+          <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+          <input type="text" pInputText size="50" placeholder="Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+      </div>
+    </ng-template>
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th *ngFor="let col of cols">
+                {{col.header}}
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData" >
+            <td *ngFor="let col of cols">
+                    {{rowData[col.field]}}
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
 
-
-<div class="example-container mat-elevation-z8">
-
-  
-  <table mat-table #table [dataSource]="dataSource">
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Title Column -->
-    <ng-container matColumnDef="produto_id">
-      <th mat-header-cell *matHeaderCellDef> ID Produto </th>
-      <td mat-cell *matCellDef="let element" class="produto_id-col"> {{element.produto_id}} </td>
-    </ng-container>
-
-    <!-- Title Column -->
-    <ng-container matColumnDef="nro_serie">
-      <th mat-header-cell *matHeaderCellDef> Numero de Serie </th>
-      <td mat-cell *matCellDef="let element"> {{element.nro_serie}} </td>
-    </ng-container>
-
-    <!-- Author Column -->
-    <ng-container matColumnDef="termino_vigencia">
-      <th mat-header-cell *matHeaderCellDef> Termino de Vigencia </th>
-      <td mat-cell *matCellDef="let element"> {{element.termino_vigencia}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/product-details/', row._id]"></tr>
-  </table>
-</div>
+<p-chart type="pie" [data]="data"></p-chart>
