--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,25 +1,20 @@
-.example-container, p-table {
-  display: flex;
-  flex-direction: column;
-  max-height: 500px;
-  min-width: 300px;
-  overflow: auto;
-}
-
-.produto_id-col {
-  flex: 0 0 100px !important;
-  white-space: unset !important;
-}
-
-.button-row {
-  margin: 10px 0;
-}
-
-table, p-table {
-  width: 100%;
-}
-
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
-}
+.example-container{
+     display: flex;
+     flex-direction: column;
+     max-height: 500px;
+     min-width: 300px;
+     overflow: auto;
+   }
+   
+   .produto_id-col {
+     flex: 0 0 100px !important;
+     white-space: unset !important;
+   }
+   
+   .button-row {
+     margin: 10px 0;
+   }
+   
+  table {
+     width: 100%;
+   }
