--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -1,57 +1,83 @@
 <div class="button-row">
-  <a mat-raised-button color="primary" [routerLink]="['/products']"><mat-icon>list</mat-icon></a>
-</div>
-<form [formGroup]="productForm" (ngSubmit)="onFormSubmit(productForm.value)">
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="IDProduto" formControlName="produto_id"
-           [errorStateMatcher]="matcher">
-    <mat-error>
-      <span *ngIf="!productForm.get('produto_id').valid && productForm.get('produto_id').touched">Please enter IDProduto</span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="NroSerie" formControlName="nro_serie"
-           [errorStateMatcher]="matcher">
-    <mat-error>
-      <span *ngIf="!productForm.get('nro_serie').valid && productForm.get('nro_serie').touched">Please enter Product NroSerie</span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="NroContrato" formControlName="nro_contrato"
-           [errorStateMatcher]="matcher">
-    <mat-error>
-      <span *ngIf="!productForm.get('nro_contrato').valid && productForm.get('nro_contrato').touched">Please enter Product NroContrato</span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input type="date" matInput placeholder="TerminoVigencia" formControlName="termino_vigencia"
-           [errorStateMatcher]="matcher">
-    <mat-error>
-      <span *ngIf="!productForm.get('termino_vigencia').valid && productForm.get('termino_vigencia').touched">Please enter Product TerminoVigencia</span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Suporte" formControlName="suporte"
-           [errorStateMatcher]="matcher">
-    <mat-error>
-      <span *ngIf="!productForm.get('suporte').valid && productForm.get('suporte').touched">Please enter Suporte</span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="SuporteFornecedor" formControlName="suporte_fornecedor"
-           [errorStateMatcher]="matcher">
-    <mat-error>
-      <span *ngIf="!productForm.get('suporte_fornecedor').valid && productForm.get('suporte_fornecedor').touched">Please enter SuporteFornecedor</span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="VersaoSoftware" formControlName="versao_software"
-           [errorStateMatcher]="matcher">
-    <mat-error>
-      <span *ngIf="!productForm.get('versao_software').valid && productForm.get('versao_software').touched">Please enter VersaoSoftware</span>
-    </mat-error>
-  </mat-form-field>
-  <div class="button-row">
-    <button type="submit" [disabled]="!productForm.valid" mat-raised-button color="primary"><mat-icon>save</mat-icon></button>
+    <a mat-raised-button color="primary" [routerLink]="['/products']"><mat-icon>list</mat-icon></a>
   </div>
-</form>
+  <form [formGroup]="productForm" (ngSubmit)="onFormSubmit(productForm.value)">
+  
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="IDProduto" formControlName="produto_id"
+             [errorStateMatcher]="matcher">
+      <mat-error>
+        <span *ngIf="!productForm.get('produto_id').valid && productForm.get('produto_id').touched">Informe o ID do Produto</span>
+      </mat-error>
+    </mat-form-field>
+  
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Numero de Serie" formControlName="nro_serie"
+             [errorStateMatcher]="matcher">
+      <mat-error>
+        <span *ngIf="!productForm.get('nro_serie').valid && productForm.get('nro_serie').touched">Informe o Numero de Serie</span>
+      </mat-error>
+    </mat-form-field>
+  
+    <mat-form-field class="example-full-width"> 
+      <mat-select placeholder="Fabricante" formControlName="fabricante"
+                  [errorStateMatcher]="matcher">
+        <mat-option>--</mat-option>
+        <mat-option value='Cisco'>Cisco</mat-option>
+        <mat-option value='Huawei'>Huawei</mat-option>
+        <mat-option value='Juniper'>Juniper</mat-option>
+      </mat-select>
+      <mat-error>
+          <span *ngIf="!productForm.get('fabricante').valid && productForm.get('fabricante').touched">Informe o Fabricante</span>
+        </mat-error>
+    </mat-form-field>
+  
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Descrição de Vigencia" formControlName="vigencia"
+             [errorStateMatcher]="matcher">
+      <mat-error>
+        <span *ngIf="!productForm.get('vigencia').valid && productForm.get('vigencia').touched">Descreva as datas e suportes vigentes</span>
+      </mat-error>
+    </mat-form-field>
+    
+    <mat-form-field class="example-full-width"> 
+        <mat-select placeholder="Fabricante" formControlName="suporte_modalidade"
+                    [errorStateMatcher]="matcher">
+          <mat-option>--</mat-option>
+          <mat-option value='PRTNR SS 8X5XNBD'>PRTNR SS 8X5XNBD</mat-option>
+          <mat-option value='SNTC 8X5XNBD'>SNTC 8X5XNBD</mat-option>
+        </mat-select>
+        <mat-error>
+            <span *ngIf="!productForm.get('suporte_modalidade').valid && productForm.get('suporte_modalidade').touched">Informe a Modalidade</span>
+          </mat-error>
+      </mat-form-field>
+  
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Suporte Fornecedor" formControlName="suporte_fornecedor"
+             [errorStateMatcher]="matcher">
+      <mat-error>
+        <span *ngIf="!productForm.get('suporte_fornecedor').valid && productForm.get('suporte_fornecedor').touched">Informe o Suporte</span>
+      </mat-error>
+    </mat-form-field>
+  
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Data end Suport" formControlName="data_end_suport"
+             [errorStateMatcher]="matcher">
+      <mat-error>
+        <span *ngIf="!productForm.get('data_end_suport').valid && productForm.get('data_end_suport').touched">Informe a Data Fim ou [Não informado pelo fabricante] </span>
+      </mat-error>
+    </mat-form-field>
+  
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="VersaoSoftware" formControlName="versao_software"
+             [errorStateMatcher]="matcher">
+      <mat-error>
+        <span *ngIf="!productForm.get('versao_software').valid && productForm.get('versao_software').touched">Informe a Versao do Software</span>
+      </mat-error>
+    </mat-form-field>
+  
+    <div class="button-row">
+      <button type="submit" [disabled]="!productForm.valid" mat-raised-button color="primary"><mat-icon>save</mat-icon></button>
+    </div>
+  </form>
+  
